2004-12-17  Kim F. Storm  <storm@cua.dk>

	* gnus-group.el (gnus-group-mode-map): Map follow-link to mouse-face.

	* gnus-sum.el (gnus-summary-mode-map): Likewise.

2004-12-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-spec.el (gnus-spec-tab): Make a Lisp form which works
	correctly even if there are wide characters.

2004-12-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* rfc2231.el (rfc2231-parse-string): Decode encoded value after
	concatenating segments rather than before concatenating them.
	Suggested by ARISAWA Akihiro <ari@mbf.ocn.ne.jp>.

2004-12-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-util.el (mm-xemacs-find-mime-charset): New macro.

2004-12-17  Aidan Kehoe  <kehoea@parhasard.net>

	* mm-util.el (mm-xemacs-find-mime-charset-1): New function used to
	unify Latin characters in XEmacs.
	(mm-find-mime-charset-region): Use it.

2004-12-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-util.el (gnus-delete-directory): New function.

	* gnus-agent.el (gnus-agent-delete-group): Use it.

	* gnus-cache.el (gnus-cache-delete-group): Use it.

2004-12-08  Stefan Monnier  <monnier@iro.umontreal.ca>

	* gnus-art.el (gnus-narrow-to-page): Don't hardcode point-min.

2004-12-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-group.el (gnus-group-make-rss-group): Use
	gnus-group-make-group instead of gnus-group-unsubscribe-group.

	* gnus-start.el (gnus-setup-news): Honor user's setting to
	gnus-message-archive-method.  Suggested by Lute Kamstra
	<Lute.Kamstra@xs4all.nl>.

2004-12-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* message.el (message-forward-make-body-mml): Remove headers
	according to message-forward-ignored-headers if a message is decoded.

2004-12-02  Romain Francoise  <romain@orebokech.com>

	* message.el (message-forward-make-body-plain): Always remove
	headers according to message-forward-ignored-headers.

2004-11-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lpath.el: Remove bbdb-create-internal, bbdb-records,
	spam-BBDB-register-routine and spam-enter-ham-BBDB.
